--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:windowSoftInputMode="adjustResize|stateHidden"
         android:theme="@style/Theme.RemoteScreenForAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".ui.layout.editor.LayoutEditor"/>
+        <activity
+            android:name=".auth.LoginActivity"/>
+        <activity
+            android:name=".auth.SignupActivity"/>
+        <activity
+            android:name=".auth.ResetPasswordActivity"/>
+        <activity
+            android:name=".ui.setting.SettingActivity"/>
+        <activity
+            android:name=".app.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
