--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,6 +18,11 @@
         android:theme="@style/Theme.RemoteScreenForAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".ui.control.remote.RemoteActivity"
+            android:exported="true"
+            android:screenOrientation="landscape"
+            android:configChanges="orientation|screenSize"/>
+        <activity
             android:name=".ui.layout.editor.LayoutEditor"/>
         <activity
             android:name=".auth.LoginActivity"/>
@@ -22,7 +31,7 @@
         <activity
             android:name=".auth.ResetPasswordActivity"/>
         <activity
-            android:name=".ui.setting.SettingActivity"/>
+            android:name=".ui.more.setting.SettingActivity"/>
         <activity
             android:name=".app.MainActivity"
             android:exported="true"
